<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <!-- App name -->
    <string name="app_name">Spotify Streamer</string>

    <!-- Activities -->
    <string name="title_activity_top_tracks">Top 10 Tracks</string>
    <string name="title_activity_about">About</string>

    <!-- Actions -->
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_about">About</string>
    <string name="action_share">Share</string>
    <string name="action_now_playing">Now Playing</string>

    <!-- Hints in controls -->
    <string name="hint_artist_name">Artist name</string>

    <!-- Default strings -->
    <string name="default_current_time">0:00</string>
    <string name="default_total_time">∞</string>

    <!-- Accessibility -->
    <string name="content_desc_artist_pic">Artist picture</string>
    <string name="content_desc_album_pic">Album picture</string>

    <!-- Artist not found -->
    <string name="label_nothing_found">Nothing found :(</string>
    <string name="msg_check_spelling">Please check the artist name is correctly spelled</string>

    <!-- No tracks found -->
    <string name="label_no_tracks_found">No tracks found :(</string>
    <string name="msg_no_tracks_found">This artist does not seem to be very popular</string>

    <!-- Preferences -->
    <string name="pref_title_location">Location</string>
    <string name="pref_key_location">location</string>
    <string name="pref_default_location">MX</string>

    <!-- Strings related to Notification Enabled preference -->
    <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
    <string name="pref_enable_notifications_label">Playback Notifications</string>

    <string name="pref_enable_notifications_true">Enabled</string>
    <string name="pref_enable_notifications_false">Not Enabled</string>
    <string name="pref_enable_notifications_default" translatable="false">true</string>

    <!-- Errors -->
    <string name="error_search_artists">An error occurred while searching artists</string>
    <string name="title_activity_player">PlayerActivity</string>
    <string name="hello_world">Hello world!</string>


    <!-- TODO: Remove or change this placeholder text -->
    <!--<string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>-->

    <!-- Format strings -->
    <string name="format_time" translatable="false">0:<xliff:g id="seconds">%02d</xliff:g></string>
    <string name="format_share">Listening <xliff:g id="track_name">%1$s</xliff:g> - <xliff:g id="track_album">%2$s</xliff:g> <xliff:g id="track_url">%3$s</xliff:g> #SpotifyStreamer</string>


</resources>
