<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Preference for setting up location of the user -->
    <EditTextPreference
        android:title="@string/pref_title_location"
        android:key="@string/pref_key_location"
        android:defaultValue="@string/pref_default_location"
        android:inputType="text"
        android:singleLine="true">
    </EditTextPreference>

    <CheckBoxPreference
        android:title="@string/pref_enable_notifications_label"
        android:key="@string/pref_enable_notifications_key"
        android:summaryOff="@string/pref_enable_notifications_false"
        android:summaryOn="@string/pref_enable_notifications_true"
        android:defaultValue="@string/pref_enable_notifications_default" />

</PreferenceScreen>