<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@mipmap/ic_launcher"
        android:layout_gravity="center"
        android:contentDescription="@string/label_nothing_found"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_no_tracks_found"
        android:layout_gravity="center"
        style="@style/Base.TextAppearance.AppCompat.Large"/>

    <TextView
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/msg_no_tracks_found"
        android:layout_gravity="center"
        android:gravity="center_horizontal"/>

</LinearLayout>